--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,33 @@
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
-  margin: 0;
-  padding: 20px;
+  font-family: 'Arial', sans-serif;
 }
 
-h1 {
-  text-align: center;
-  color: #333;
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+  padding: 0;
 }
 
+li {
+  margin-bottom: 20px;
+  border: 1px solid grey;
+  padding: 10px;
+  margin: 10px;
+}
 
+img {
+  max-width: 100px;
+  max-height: 100px;
+  margin-left: 250px;
+  margin-bottom: -100px;
+}
+
+div {
+  display: flex;
+  flex-direction: column;
+}
+
+p {
+  margin: 5px 0;
+}
